additional fix for JSmol menu overflow (issue #399)

--- a/portal/src/main/webapp/css/mutation_details.css
+++ b/portal/src/main/webapp/css/mutation_details.css
@@ -164,6 +164,7 @@ th.mutation-details-qtip-style {
 .mutation-3d-vis-container {
 	position: relative;
 	z-index: 2;
+	overflow: hidden;
 }
 .mutation-3d-info {
 	font-size: 13px;
